try to fix double-tap bug on iOS. Increase font size for buttons

--- a/src/components/parts/AddButtonRow.css
+++ b/src/components/parts/AddButtonRow.css
@@ -6,15 +6,15 @@
 
 .addButton {
   display: flex;
-  font-size: 0.8em;
+  font-size: 16px;
   flex-basis: 25%;
 }
 
 .powerup {
   font-size: 0.6em;
   position: absolute;
-  bottom: 3px;
-  right: -9px;
+  bottom: -6px;
+  right: -16px;
   color: white !important;
 }
 
